@@ -1,2 +1,4 @@
+* Add deductible date on claim service - Allow to use it in rule engine
+
 Version 1.8 - 2016-07-06
 * Module Creation
